# carma-platform

./: build_parse.bash
arbitrator/: CMakeLists.txt
arbitrator/test/: test_utils.h
carma/launch/: guidance.launch
carma/rviz/: carma_default.rviz
carma/scripts/: generate_log_name.sh
carma_record/scripts/: lane_control.py  stan_control.py
carma_wm/: CMakeLists.txt
carma_wm/src/: CARMAWorldModel.cpp  MapConformer.cpp  WMListener.cpp  collision_detection.cpp
carma_wm/test/: CollisionDetectionTest.cpp  GeometryTest.cpp
carma_wm_ctrl/: CMakeLists.txt
carmajava/: build.gradle
carmajava/guidance/: build.gradle
carmajava/launch/: saxton_cav.launch  saxton_cav_src.launch
cooperative_lanechange/src/: cooperative_lanechange.cpp
cost_plugin_system/: CMakeLists.txt
docker/: checkout.bash
engineering_tools/: RouteCreation_CSV2Yaml.py  RouteCreation_KML2CSV.py  configure.sh  copyright.sh  extract_rpy_from_quat.py  guidance-engage-test.sh  install-docker.sh  process_traj_logs.py  remote_install.bash  reverse_waypoints.py  speedharm-cli.py  speedharm_auto_configure.py
guidance_command_repeater/: CMakeLists.txt
guidance_command_repeater/launch/: guidance_command_repeater.launch
health_monitor/src/: driver_manager.cpp
inlanecruising_plugin/config/: parameters.yaml
inlanecruising_plugin/src/: inlanecruising_plugin.cpp
mobilitypath_publisher/include/: mobilitypath_publisher.h
mobilitypath_publisher/src/: mobilitypath_publisher.cpp
mobilitypath_visualizer/: CMakeLists.txt  package.xml
mobilitypath_visualizer/config/: params.yaml
mobilitypath_visualizer/include/: mobilitypath_visualizer.h
motion_computation/: CMakeLists.txt
mpc_follower_wrapper/: CMakeLists.txt
object_detection_tracking/: CMakeLists.txt
platooning_tactical_plugin/: CMakeLists.txt
port_drayage_plugin/: CMakeLists.txt
pure_pursuit_wrapper/: CMakeLists.txt  package.xml
roadway_objects/: CMakeLists.txt
safe_stop/: CMakeLists.txt  package.xml
safe_stop/config/: safe_stop_params.yaml
safe_stop/include/: route_end.h  safe_stop.h  safe_stop_arbitrator.h
safe_stop/include/safe_stop/smoothing/: CubicSpline.h  SplineI.h  filters.h
safe_stop/src/: main.cpp  route_end.cpp  safe_stop_arbitrator.cpp  safe_stop_node.cpp
safe_stop/src/smoothing/: CubicSpline.cpp
safe_stop/test/: test_route_end.cpp
(+55 files in other folders)
